NOOP: Bunch of cleanup fixes * Changed activeCellXs to start & num * Make horizontal scrolling during nav not require rendererd row * Make selected cell expansion independent of expand option * Get rid of unneeded blist-active-cell class * Fix not selecting collapsed nested table headers * When scrolling horizontally via nav, first scroll to show right then left to ensure left is visible * Misc code cleanup * Move ESC keydown selector onto table, not document * Fix wrapping horizontally with nested table at the edge

--- a/public/stylesheets/table-core.css
+++ b/public/stylesheets/table-core.css
@@ -432,9 +432,6 @@ img.blist-table-option-icon
     height: 100%;
 }
 
-.blist-cell-active, .blist-cell-selected.blist-cell-active {
-}
-
 .blist-table-navigator {
     position: absolute;
     left: -10000px;
